@@ -39,6 +39,7 @@
 #define DISABLECONTEXTMENU	"/apps/gnome-mplayer/preferences/disablecontextmenu"
 #define SUBTITLEFONT	"/apps/gnome-mplayer/preferences/subtitlefont"
 #define SUBTITLESCALE	"/apps/gnome-mplayer/preferences/subtitlescale"
+#define SUBTITLECODEPAGE	"/apps/gnome-mplayer/preferences/subtitlecodepage"
 
 #define DISABLE_QT		"/apps/gecko-mediaplayer/preferences/disable_qt"
 #define DISABLE_REAL	"/apps/gecko-mediaplayer/preferences/disable_real"
@@ -196,6 +197,7 @@ gboolean playlist_visible;
 gboolean restore_playlist;
 const gchar *subtitlefont;
 gdouble subtitle_scale;
+gchar *subtitle_codepage;
 
 // tv stuff
 gchar *tv_device;
