@@ -479,3 +479,29 @@ gchar *langlist[464] = { "Abkhazian,abk,ab",
     "Zulu,zul,zu",
     "Zuni,zun",
 };
+
+gchar *codepagelist[24] = { "UNICODE",
+    "BIG5",
+    "CP874",
+    "CP936",
+    "CP949",
+    "CP1250",
+    "CP1251",
+    "ISO-8859-1",
+    "ISO-8859-2",
+    "ISO-8859-3",
+    "ISO-8859-4",
+    "ISO-8859-5",
+    "ISO-8859-6",
+    "ISO-8859-7",
+    "ISO-8859-8",
+    "ISO-8859-9",
+    "ISO-8859-10",
+    "ISO-8859-11",
+    "ISO-8859-12",
+    "ISO-8859-13",
+    "ISO-8859-14",
+    "ISO-8859-15",
+    "KOI8-R",
+    "KOI8-U/RU"
+};
